--- a/templates/hello.html
+++ b/templates/hello.html
@@ -23,7 +23,7 @@
       <select id="coefficient_1" class="changeable" style="font-size: 20px">
         <option value="0.8">80%</option>
         <option value="0.9">90%</option>
-        <option value="1.0">100%</option>
+        <option value="1.0" selected>100%</option>
         <option value="1.1">110%</option>
         <option value="1.2">120%</option>
       </select>
