--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"
-        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
-        crossorigin="anonymous">
-</script>
+<script type="text/javascript" src="/resources/jquery.tmpl.min.js"></script>
+<script type="text/javascript" src="/resources/jquery-1.12.4.min.js"></script>
 
 <table>
   <tr>
