--- a/templates/hello.html
+++ b/templates/hello.html
@@ -8,7 +8,7 @@
 </br>
 
 <input id="user_id" type="text" style="width: 100px; font-size: 20px">
-<button onclick="signIn()">set id</button>
+<button onclick="signIn()">set id and go chat</button>
 
 
 <script>
